--- a/plugin.xml
+++ b/plugin.xml
@@ -53,8 +53,9 @@
 
       <framework src="com.android.support:support-v4:+" />
       <framework src="com.android.support:appcompat-v7:+" />
-      <source-file src="src/android/libs/opencv-release.aar" target-dir="libs/opencv-release.aar" />
-      <source-file src="src/android/ImageDetectionPlugin.java" target-dir="src/com/cloudoki/imagedetectionplugin" />
+      <source-file src="src/android/libs/build-extras.gradle" target-dir="app/" />
+      <source-file src="src/android/libs/opencv-release.aar" target-dir="app/libs/" />
+      <source-file src="src/android/ImageDetectionPlugin.java" target-dir="app/src/com/cloudoki/imagedetectionplugin/" />
     </platform>
 
     <!-- iOS -->
